# python-aws-events

./: .gitignore  pyproject.toml
.github/workflows/: main.yml  validations.yml
aws_lambda_event_types/: sns.py
tests/: test_aws_events_sns.py  test_aws_service_events_sns.py
