[tool.poetry]
name = "aws-events"
version = "0.1.0"
description = "Transform AWS Events into dataclasses"
authors = ["Matthew Raspberry <3092450+mraspberry@users.noreply.github.com>"]
readme = "README.md"
license = "BSD-3-Clause"
packages = [{include = "aws_events"}]
classifiers = [
    "Development Status :: 1 - Planning",
    "Development Status :: 2 - Pre-Alpha",
    "Development Status :: 3 - Alpha",
    "Development Status :: 4 - Beta",
    "Environment :: Other Environment",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    ]

[tool.poetry.dependencies]
python = "^3.7"
wrapt = "^1.15.0"
inflection = "^0.5.1"


[tool.poetry.group.dev.dependencies]
hypothesis = "^6.70.0"
pytest = "^7.2.2"
coverage = "^7.2.2"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
